# mctheory-praxis

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  PREDICTION_MARKET_ATLAS.md  README.md  TRADING_ATLAS.md  approve_usdc.py  batch_favs.py  batch_longshots.py  batch_trade.py  bump_inflation.py  bump_orders.py  check_models.py  check_orders.py  check_poly_usdc.py  deposit_direct.py  deposit_usdc.py  deposit_v2.py  derive_keys.py  derive_keys2.py  docker-compose.yml  docker-entrypoint.sh  find_macro_markets.py  first_trade.py  first_trade_v2.py  first_trade_v3.py  portfolio.py  praxis_manifest.txt  probe_clob.py  probe_gamma.py  probe_price_history.py  pyproject.toml  scan_all_weather.py  scan_longshots.py  scan_new_markets.py  scan_nyc.py  scan_short_favs.py  (+6 more)
.claude/: settings.local.json
claude/: CLAUDE_CODE_RULES.md  META_DOCS.md  SERVICE_CHEATSHEET.md  TODO.md  WORKFLOW_MODES_PRAXIS.md
contracts/: .gitignore  FLASH_LOAN_README.md  hardhat.config.js  package-lock.json  package.json
dashboards/: data_collector.py
docs/: ATLAS_DB.md  COMPUTATIONAL_ENGINES.md  CPO_ALLOCATION.md  FUTURE_ENHANCEMENTS.md  MEV_BUILD_PLAN.md  PREDICTION_MARKET_RESEARCH_PROMPT.md  REGIME_MATRIX.md  SCHEMA_MIGRATION_PLAN.md  SCHEMA_NOTES.md  TRADING_CONVENTIONS.md  TRADING_FINDINGS.md  praxis_main_series.md  praxis_main_series_transcript.md
engines/: __init__.py  actuarial.py  ai_ensemble.py  allocation.py  atlas_sync.py  backtest_engine.py  base.py  btc_momentum.py  burgess.py  burgess_v1_runtime_mc.py  carry_executor.py  chan_cpo.py  cointegration.py  correlation_engine.py  cpo_core.py  cpo_training.py  crypto_data_collector.py  crypto_predictor.py  crypto_ta_strategy.py  dex_quoter.py  dex_scanner.py  event_classifier.py  event_signal.py  flash_executor.py  flash_scanner.py  funding_executor.py  funding_rate_strategy.py  funding_spread_strategy.py  garch_model.py  grid_bot_strategy.py  intrabar_predictor.py  live_collector.py  lstm_predictor.py  market_maker.py  mcb_cpo_strategy.py  mev_executor.py  mev_scanner.py  microstructure_utils.py  minute_features.py  model.py  (+22 more)
examples/: milestone1_demo.py  sma_crossover.yaml
market_data/: __init__.py  bridge.py  fetchers.py  schema.py  universe.py
(+508 files in other folders)
