[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mctheory-praxis"
version = "0.1.0"
description = "McTheory Praxis -- Universal Trading Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Jeff"}
]

dependencies = [
    "duckdb>=1.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "polars>=1.0.0",
    "pyarrow>=14.0.0",
    "xxhash>=3.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]
data = [
    "yfinance>=0.2.0",
    "ccxt>=4.2.25",
]
mcp = [
    "mcp>=1.2.0",
]
onchain = [
    "web3>=6.15.0",
    "py-clob-client>=0.17.0",
]
backend = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
]
dashboard = [
    "streamlit>=1.32.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
